--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-node": "^5.2.1",
         "eslint-plugin-promise": "^3.6.0",
         "eslint-plugin-standard": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
         "husky": "^0.14.3",
         "jest": "^22.1.1"
     }
