--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "webpack": "webpack --colors --profile --progress --display-modules",
         "demoDev": "cross-env NODE_ENV=development npm run webpack",
-        "demoBuild": "cross-env NODE_ENV=production npm run webpack"
+        "demoBuild": "cross-env NODE_ENV=production npm run webpack",
+        "demoDevHot": "cross-env NODE_ENV=development webpack-dev-server --inline --config webpack.config.js"
     },
     "repository": {
         "type": "git",
@@ -44,9 +45,11 @@
         "postcss-loader": "^3.0.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.0",
+        "uglifyjs-webpack-plugin": "^1.3.0",
         "url-loader": "^1.1.1",
         "webpack": "^4.17.2",
-        "webpack-cli": "^3.1.0"
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.7"
     },
     "dependencies": {
         "mini-css-extract-plugin": "^0.4.2",
