--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "style-loader": "^0.23.0",
         "uglifyjs-webpack-plugin": "^1.3.0",
         "url-loader": "^1.1.1",
+        "vue-loader": "^15.4.2",
+        "vue-template-compiler": "^2.5.17",
         "webpack": "^4.17.2",
         "webpack-cli": "^3.1.0",
         "webpack-dev-server": "^3.1.7"
