--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "mini-css-extract-plugin": "^0.4.2",
         "node-sass": "^4.10.0",
         "postcss-loader": "^3.0.0",
+        "rename-output-webpack-plugin": "^1.0.1",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.0",
         "uglifyjs-webpack-plugin": "^1.3.0",
