--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-promise": "^3.6.0",
         "eslint-plugin-standard": "^3.0.1",
         "file-loader": "^2.0.0",
+        "glob": "^7.1.3",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^0.14.3",
